Phase 1: Migrate core utility classes from URL to URI
Co-authored-by: kthoms <265597+kthoms@users.noreply.github.com>