@@ -22,6 +22,8 @@ import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Collections;
 import java.util.HashMap;
@@ -289,7 +291,9 @@ public final class ProcessEngines {
    */
   public static ProcessEngineInfo retry(String resourceUrl) {
     try {
-      return initProcessEngineFromResource(new URL(resourceUrl));
+      return initProcessEngineFromResource(new URI(resourceUrl).toURL());
+    } catch (URISyntaxException e) {
+      throw new ProcessEngineException("invalid uri: %s".formatted(resourceUrl), e);
     } catch (MalformedURLException e) {
       throw new ProcessEngineException("invalid url: %s".formatted(resourceUrl), e);
     }
